Fix channels svg overflow and update channels padding

--- a/src/components/Channels/Channels.css
+++ b/src/components/Channels/Channels.css
@@ -1,6 +1,8 @@
 .Channel-icon {
   width: 150px;
   height: 150px;
+  max-width: 150px;
+  max-height: 150px;
 }
 
 .toast.show {
